tests/fixtures/invalid/pow_list_set_bool.py
# Cannot call pow() with List[int], Set[int], Bool
x = pow([1, 2, 3], {1, 2, 3}, True)
